# knn_ocr_2

./: CMakeLists.txt  CMakeSettings.json  README.md  knn.cu  knn.cuh  knn_ocr_2.cpp  knn_ocr_2.h
